# YOLO-Thesis

./: .flake8  .gitignore  Makefile  pyproject.toml
src/: config.ini  constants.py  main.py  tracker.py  utils.py  yolo.py
src/yolo/: .gitignore
