[tool.poetry]
name = "yolo-thesis"
version = "0.1.0"
description = "Count people with YOLOv3"
authors = [
    "Klyde Lencioco <kolencioco41@gmail.com>",
    "Luke Clark Andrada <lcmandrada@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
