[tool.poetry]
name = "yolo-thesis"
version = "0.1.0"
description = "Count people with YOLOv3"
authors = [
    "Klyde Lencioco <kolencioco41@gmail.com>",
    "Luke Clark Andrada <lcmandrada@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.4.0"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
py_version = "37"
src_paths = ["src"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
